<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ReferencesActivity">

    <RelativeLayout
        android:id="@+id/refMain"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/gradient_list">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp">

            <TextView
                android:id="@+id/refReferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginBottom="20dp"
                android:gravity="center"
                android:text="@string/references_activity_title"
                android:textColor="@color/main_page_white"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/txtRefWho"
                android:layout_below="@+id/refReferences"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/link_who"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtRefJHU"
                android:layout_below="@+id/txtRefWho"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/link_jhu"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtRefOurworldInData"
                android:layout_below="@+id/txtRefJHU"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/link_cluster"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtRefWorldoMeter"
                android:layout_below="@+id/txtRefOurworldInData"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/link_worldo"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/txtRefMaps"
                android:layout_below="@+id/txtRefWorldoMeter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/link_maps"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                android:textStyle="italic" />
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>